--- a/packages/@som/blog/client/assets/scss/global.scss
+++ b/packages/@som/blog/client/assets/scss/global.scss
@@ -2,3 +2,5 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
+
+@import './prose.scss'
