feat: tailwind + var commit

--- a/packages/@som/blog/client/assets/scss/variables.scss
+++ b/packages/@som/blog/client/assets/scss/variables.scss
@@ -2,9 +2,11 @@
 $sideBarWidth: 210px;
 
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
-// 使用 -- 的命名是无法转义的
+// 使用 -- 前缀的命名是无法转义的
 :export {
   --primary-bg-color: $primary-bg-color;
   sideBarWidth: $sideBarWidth;
   primaryBgColor: $primary-bg-color;
+  primary-bg-color: $primary-bg-color;
+  primary-color: $primary-color;
 }
