feat: commit dark side

--- a/packages/@som/blog/client/assets/scss/global.scss
+++ b/packages/@som/blog/client/assets/scss/global.scss
@@ -1,6 +1,10 @@
+@use "./constants.scss" as C;
+@use "./util.scss" as Util;
+
 @import './prose.scss';
 
 :root {
-  --primary-color: #28a745;
-  --primary-bg-color: #ffffff;
+  @each $var, $color in C.$root-vars {
+    #{$var}: Util.getRgbaString($color);
+  }
 }
