--- a/packages/@som/blog/client/assets/scss/tailwind.scss
+++ b/packages/@som/blog/client/assets/scss/tailwind.scss
@@ -19,4 +19,13 @@
         14 0,
       pointer;
   }
+
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+    font-size: 14px;
+    line-height: 1.5;
+    color: rgb(var(--color-fg-default));
+    background-color: rgb(var(--color-canvas-default));
+  }
 }
