feat: commit article slug changes

--- a/packages/@som/blog/client/assets/scss/element-variables.scss
+++ b/packages/@som/blog/client/assets/scss/element-variables.scss
@@ -1,5 +1,5 @@
-$--color-primary:#28a745;
+$--color-primary: rgb(52, 125, 57);
 /* 改变 icon 字体路径变量，必需 */
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
-@import "~element-ui/packages/theme-chalk/src/index";
+@import '~element-ui/packages/theme-chalk/src/index';
