--- a/packages/@som/blog/client/assets/scss/global.scss
+++ b/packages/@som/blog/client/assets/scss/global.scss
@@ -17,8 +17,8 @@
   // 滚动条上的滚动滑块
   &::-webkit-scrollbar-thumb {
     @apply bg-header-bg;
-
   }
+
   //  滚动条轨道
   // &::-webkit-scrollbar-track {
   //   // background: linear-gradient(90deg, #434343, #434343 1 px, #111 0, #111);
@@ -29,6 +29,20 @@
   @include better-scrollbar;
 }
 
+.hover-scroll-bar {
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+  &::-webkit-scrollbar-thumb {
+    @apply transition-colors;
+  }
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      @apply bg-header-bg;
+    }
+  }
+  // 滚动条上的滚动滑块
+}
 html {
   @include better-scrollbar;
 }
