feat: github theme

--- a/packages/@som/vue3/src/assets/scss/global.scss
+++ b/packages/@som/vue3/src/assets/scss/global.scss
@@ -1,6 +1,7 @@
 @use './expose/root.scss';
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+@use 'tailwindcss/base';
+@use './layer/base.scss' as cb;
+@use 'tailwindcss/components';
+@use './layer/components.scss'  as cc;
+@use 'tailwindcss/utilities';
+@use './layer/utilities.scss' as cu;
