feat: add utils/md2cwm

--- a/packages/@som/blog/client/assets/scss/custom/utilities.scss
+++ b/packages/@som/blog/client/assets/scss/custom/utilities.scss
@@ -1,5 +1,26 @@
 @layer utilities {
   .link {
-    @apply hover:underline hover:text-accent-fg;
+    @apply hover:text-accent-fg hover:underline;
+  }
+
+  .btn {
+    @apply border-btn-border bg-btn-bg text-btn-text;
+    box-shadow: var(--color-btn-shadow), var(--color-btn-inset-shadow);
+    transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+    transition-property: color, background-color, border-color;
+
+    &:hover {
+      @apply border-btn-hover-border bg-btn-hover-bg;
+      transition-duration: 0.1s;
+    }
+
+    &.btn-primary {
+      @apply border-btn-primary-border bg-btn-primary-bg text-btn-primary-text;
+      box-shadow: var(--color-btn-primary-shadow),
+        var(--color-btn-primary-inset-shadow);
+      &:hover {
+        @apply border-btn-primary-hover-border bg-btn-primary-hover-bg;
+      }
+    }
   }
 }
