feat: add font sync

--- a/packages/@som/blog/client/assets/font/index.scss
+++ b/packages/@som/blog/client/assets/font/index.scss
@@ -1,6 +1,1 @@
-@font-face {
-  font-family: 'Segoe UI';
-  src: url('@/assets/font/sources/segoeuisb.woff2') format('woff2'),
-    url('@/assets/font/sources/segoeuisb.woff') format('woff'),
-    url('@/assets/font/sources/segoeuisb.ttf') format('truetype');
-}
+// @import './segoeuisb/segoeuisb.scss';
