--- a/apps/supabase-vue-3/src/assets/scss/global.scss
+++ b/apps/supabase-vue-3/src/assets/scss/global.scss
@@ -1,3 +1,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import 'element-plus/theme-chalk/dark/css-vars.css';
+html,
+body {
+  @apply transition-colors dark:bg-[rgb(0,30,38)] dark:text-white;
+}
