chore: commit codes

--- a/apps/blog-new/assets/css/main.scss
+++ b/apps/blog-new/assets/css/main.scss
@@ -1,4 +1,6 @@
-@import 'perfect-scrollbar/css/perfect-scrollbar.css';
+@import "perfect-scrollbar/css/perfect-scrollbar.css";
+@import "swiper/scss";
+@import "swiper/scss/pagination";
 .ps .ps__rail-x:hover,
 .ps .ps__rail-y:hover,
 .ps .ps__rail-x:focus,
