--- a/blog-archived/client/assets/scss/theme/light.scss
+++ b/blog-archived/client/assets/scss/theme/light.scss
@@ -168,8 +168,8 @@ $light-vars: (
   --color-select-menu-tap-focus-bg: #b6e3ff,
   // --color-overlay-shadow: 0 1px 3px rgba(27, 31, 36, 0.12),
   // 0 8px 24px rgba(66, 74, 83, 0.12),
-  --color-header-text: rgba(255, 255, 255, 0.7),
-  --color-header-bg: #24292f,
+  --color-header-text: #1f2328,
+  --color-header-bg: #f6f8fa,
   --color-header-divider: #57606a,
   --color-header-logo: #ffffff,
   --color-header-search-bg: #24292f,
@@ -279,7 +279,7 @@ $light-vars: (
   --color-fg-on-emphasis: #ffffff,
   --color-canvas-default: #ffffff,
   --color-canvas-overlay: #ffffff,
-  --color-canvas-inset: #f6f8fa,
+  --color-canvas-inset: #fefefe,
   --color-canvas-subtle: #f6f8fa,
   --color-border-default: #d0d7de,
   --color-border-muted: hsla(210, 18%, 87%, 1),
