--- a/blog-archived/client/assets/scss/global.scss
+++ b/blog-archived/client/assets/scss/global.scss
@@ -1,10 +1,12 @@
 @use './constants.scss' as C;
 @use './util.scss' as Util;
 @use './theme/light.scss' as Light;
+
 // @use '../font/index.scss' as *;
-@import '../font/index.scss';
+@import '../font/index';
+
 // @import './theme.scss';
-@import './prose.scss';
+@import './prose';
 
 :root {
   @each $var, $color in C.$root-vars {
@@ -16,16 +18,29 @@
   @each $var, $color in Light.$light-vars {
     #{$var}: Util.getRgbaString($color);
   }
+
+  .hover-scroll-bar {
+    &:hover {
+      &::-webkit-scrollbar-thumb {
+        @apply bg-border-muted;
+      }
+    }
+
+    // 滚动条上的滚动滑块
+  }
 }
+
 body,
 html {
   transition: background-color 0.3s ease;
 }
+
 @mixin better-scrollbar {
   // 滚动条高宽及背景
   &::-webkit-scrollbar {
     width: 12px;
   }
+
   // 滚动条上的滚动滑块
   &::-webkit-scrollbar-thumb {
     @apply bg-header-bg;
@@ -37,35 +52,72 @@ html {
   // }
 }
 
-.better-scroll-bar {
-  @include better-scrollbar;
-}
-
 .hover-scroll-bar {
   &::-webkit-scrollbar {
     width: 12px;
   }
+
   &::-webkit-scrollbar-thumb {
     @apply transition-colors;
   }
+
   &:hover {
     &::-webkit-scrollbar-thumb {
       @apply bg-header-bg;
     }
   }
+
   // 滚动条上的滚动滑块
 }
 
-[data-color-mode='light'] {
-  .hover-scroll-bar {
-    &:hover {
-      &::-webkit-scrollbar-thumb {
-        @apply bg-border-muted;
-      }
-    }
-    // 滚动条上的滚动滑块
-  }
+/* 隐藏 Chrome、Edge、Safari 浏览器的滚动条 */
+body::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
+
+/* 自定义滚动条的轨道 */
+body::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* 自定义滚动条的滑块 */
+body::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 10px;
+  transition:
+    background-color 0.3s,
+    width 0.3s;
+}
+
+/* 滚动的时候显示滚动条 */
+body:active::-webkit-scrollbar-thumb {
+  background-color: rgb(0 0 0 / 40%);
+}
+
+/* 鼠标悬停时，滚动条变宽和颜色加深 */
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(0 0 0 / 80%);
+  width: 8px;
+}
+
+/* 滚动条不占用空间 (Chrome, Edge, Safari) */
 html {
-  @include better-scrollbar;
+  scrollbar-gutter: stable;
+}
+
+/* 针对 Firefox 的放大效果 */
+@media (hover: hover) {
+  body {
+    scrollbar-color: transparent transparent;
+  }
+
+  body:active {
+    scrollbar-color: rgb(0 0 0 / 40%) transparent;
+  }
+
+  body:hover {
+    scrollbar-color: rgb(0 0 0 / 80%) transparent;
+    scrollbar-width: thin; /* 确保宽度变化的效果 */
+  }
 }
