--- a/blog-archived/client/assets/scss/global.scss
+++ b/blog-archived/client/assets/scss/global.scss
@@ -70,54 +70,25 @@ html {
   // 滚动条上的滚动滑块
 }
 
-/* 隐藏 Chrome、Edge、Safari 浏览器的滚动条 */
-// body::-webkit-scrollbar {
-//   width: 0;
-//   background: transparent;
-// }
+/* Color Mode transition */
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
 
-// /* 自定义滚动条的轨道 */
-// body::-webkit-scrollbar-track {
-//   background: transparent;
-// }
+::view-transition-old(root) {
+  z-index: 1;
+}
 
-// /* 自定义滚动条的滑块 */
-// body::-webkit-scrollbar-thumb {
-//   background-color: transparent;
-//   border-radius: 10px;
-//   transition:
-//     background-color 0.3s,
-//     width 0.3s;
-// }
+::view-transition-new(root) {
+  z-index: 2147483646;
+}
 
-// /* 滚动的时候显示滚动条 */
-// body:active::-webkit-scrollbar-thumb {
-//   background-color: rgb(0 0 0 / 40%);
-// }
+[data-color-mode='dark']::view-transition-old(root) {
+  z-index: 2147483646;
+}
 
-// /* 鼠标悬停时，滚动条变宽和颜色加深 */
-// body::-webkit-scrollbar-thumb:hover {
-//   background-color: rgb(0 0 0 / 80%);
-//   width: 8px;
-// }
-
-// /* 滚动条不占用空间 (Chrome, Edge, Safari) */
-// html {
-//   scrollbar-gutter: stable;
-// }
-
-// /* 针对 Firefox 的放大效果 */
-// @media (hover: hover) {
-//   body {
-//     scrollbar-color: transparent transparent;
-//   }
-
-//   body:active {
-//     scrollbar-color: rgb(0 0 0 / 40%) transparent;
-//   }
-
-//   body:hover {
-//     scrollbar-color: rgb(0 0 0 / 80%) transparent;
-//     scrollbar-width: thin; /* 确保宽度变化的效果 */
-//   }
-// }
+[data-color-mode='dark']::view-transition-new(root) {
+  z-index: 1;
+}
